# LeafcutterLLM

./: .gitignore  CHANGELOG.md  Containerfile  Dockerfile  LEAFCUTTER_CRITICAL_REVIEW.md  LEAFCUTTER_ENHANCEMENT_PLAN.md  LEAFCUTTER_MODEL_LINEUP.md  LEAFCUTTER_PROGRESSIVE_TESTING_FRAMEWORK.md  LEAFCUTTER_TESTING_CHECKLIST.md  LEAFCUTTER_TESTING_EXECUTIVE_SUMMARY.md  LEAFCUTTER_TESTING_SCRIPTS.md  LEAFCUTTER_TEST_REPORT.md  LEAFCUTTER_V0.7.0_BRUTAL_FINAL_AUDIT.md  LICENSE  README.md  atta  benchmark  coverage.out  go.mod  leafcutter-bench  leafcutter-tui  record.md  test-suite  tui
.github/workflows/: go.yml
cmd/airllm/: main.go
cmd/atta/: main.go
cmd/benchmark/: main.go
cmd/server/: compatibility_ui.go  main.go
cmd/test-kquant/: main.go
cmd/test-suite/: main.go
cmd/tui/: main.go
internal/gguf/: gguf.go
internal/safetensors/: safetensors.go
models/: README.md
rust/: Cargo.toml  MILESTONES_AND_TESTING.md  TEST_REPORT.md  TEST_RESULTS.md  handoff-leafcutterllm.md
rust/src/: lib.rs  main.rs
rust/src/api/: mod.rs
rust/src/backend/: cpu.rs  mod.rs  wgpu.rs
rust/src/cache/: mod.rs
rust/src/inference/: attention.rs  engine.rs  mod.rs  sampler.rs  shard_engine.rs
rust/src/kernels/: int8_gemm.rs  mod.rs  q4_0.rs  q8_0.rs  simd.rs
rust/src/model/: arch.rs  gguf.rs  loader.rs  mod.rs  quant.rs  tensor.rs
rust/src/shard/: format.rs  loader.rs  mod.rs  writer.rs
rust/src/tokenizer/: mod.rs
rust/tests/: end_to_end.rs
scripts/: benchmark_all_models.sh  download_models.sh  generate_coverage.sh  generate_graphs.py  test_single_model.sh
(+28 files in other folders)
