[package]
name = "leafcutter"
version = "0.8.0"
edition = "2021"
authors = ["THE-PATHFINDER-EYE Team"]
description = "Memory-safe LLM inference engine with layer streaming and K-quant support"
license = "MIT"

[lib]
name = "leafcutter"
path = "src/lib.rs"

[[bin]]
name = "leafcutter"
path = "src/main.rs"

[[bin]]
name = "split_model"
path = "src/bin/split_model.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
half = "2.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rayon = "1.10"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = "1.25.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
